--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,44 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script>
+      // fake SCORM API as this is not SCORM-packaged
+      window.API = (function() {
+        var data = {
+          "cmi.core.student_id": "000100",
+          "cmi.core.student_name": "Student, Joe",
+          "cmi.core.lesson_location": "",
+          "cmi.core.lesson_status": "not attempted",
+          "cmi.suspend_data": ""
+        };
+        return {
+          LMSInitialize: function() {
+            return "true";
+          },
+          LMSCommit: function() {
+            return "true";
+          },
+          LMSFinish: function() {
+            return "true";
+          },
+          LMSGetValue: function(model) {
+            return data[model] || "";
+          },
+          LMSSetValue: function(model, value) {
+            data[model] = value;
+            return "true";
+          },
+          LMSGetLastError: function() {
+            return "0";
+          },
+          LMSGetErrorString: function(errorCode) {
+            return "No error";
+          },
+          LMSGetDiagnostic: function(errorCode) {
+            return "No error";
+          }
+        };
+      })();
+    </script>
   </body>
 </html>
